Accessibility Update: minor mods to html and css

--- a/login.html
+++ b/login.html
@@ -1,55 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Login Page</title>
 
-    <!-- main site styles -->
-    <link rel="stylesheet" href="assets/styles.css">
-
-    <!-- A11Y widget + basic helpers (matching register) -->
-    <style>
-        /* === A11Y tab + panel === */
-        .a11y-tab{position:fixed;top:50%;right:0;transform:translateY(-50%);z-index:100000}
-        .a11y-tab button{writing-mode:vertical-rl;transform:rotate(180deg);background:#111;color:#fff;border:0;border-radius:12px 0 0 12px;padding:10px 8px;font-weight:600;box-shadow:0 6px 16px rgba(0,0,0,.25);cursor:pointer}
-        .a11y-panel{position:fixed;top:0;right:-340px;width:320px;max-width:90vw;height:100vh;background:#0f1115;color:#e8eef8;border-left:1px solid rgba(255,255,255,.12);box-shadow:-20px 0 40px rgba(0,0,0,.35);transition:right .28s ease;z-index:100001}
-        .a11y-panel.open{right:0}
-        .a11y-panel header{display:flex;align-items:center;justify-content:space-between;padding:16px 18px;border-bottom:1px solid rgba(255,255,255,.12)}
-        .a11y-panel h3{margin:0;font-size:1.05rem}
-        .a11y-panel .body{padding:16px 18px;display:grid;gap:14px}
-        .a11y-panel .row{display:flex;align-items:center;justify-content:space-between;gap:8px}
-        .a11y-panel .group{border:1px solid rgba(255,255,255,.12);border-radius:12px;padding:12px;display:grid;gap:10px}
-        .switch{--w:44px;--h:24px;position:relative;display:inline-block;width:var(--w);height:var(--h)}
-        .switch input{opacity:0;width:0;height:0}
-        .slider{position:absolute;inset:0;cursor:pointer;background:#3a3f47;border-radius:var(--h);transition:.2s}
-        .slider:before{content:"";position:absolute;height:20px;width:20px;left:2px;top:2px;background:#fff;border-radius:50%;transition:.2s}
-        .switch input:checked + .slider{background:#5fb3ff}
-        .switch input:checked + .slider:before{transform:translateX(20px)}
-
-        /* High-contrast (same as register) */
-        body.a11y-contrast .glass-card{background:transparent!important;border:0!important;box-shadow:none!important;padding:0!important}
-        body.a11y-contrast .screen{background:#fff!important;border:2px solid #000!important;box-shadow:none!important}
-        body.a11y-contrast .status-bar,
-        body.a11y-contrast .screen-title,
-        body.a11y-contrast label,
-        body.a11y-contrast .muted,
-        body.a11y-contrast h1,
-        body.a11y-contrast h2{color:#000!important;text-shadow:none!important}
-        body.a11y-contrast .glass-input{background:#fff!important;color:#000!important;border:2px solid #000!important;box-shadow:none!important}
-        body.a11y-contrast .glass-input::placeholder{color:#444!important}
-        body.a11y-contrast .slide-track{background:#fff!important;border:2px solid #000!important;box-shadow:none!important}
-        body.a11y-contrast .slide-handle{background:#000!important;color:#fff!important;box-shadow:none!important}
-        body.a11y-contrast .slide-label{color:#000!important;text-shadow:none!important}
-        body.a11y-contrast a{color:#0037ff!important;text-decoration:underline!important}
-        body.a11y-contrast .phone-stage{min-height:60vh}
-        body.a11y-contrast .a11y-panel{background:#fff!important;color:#000!important;border-left:2px solid #000!important}
-        body.a11y-contrast .a11y-panel *{color:#000!important;text-shadow:none!important}
-        body.a11y-contrast .a11y-panel button{background:#000!important;color:#fff!important;border:2px solid #000!important;box-shadow:none!important}
-        body.a11y-contrast .a11y-tab button{background:#000!important;color:#fff!important}
-
-        /* Larger text toggle */
-        html.a11y-large{font-size:18px}
-    </style>
+    <!-- Page styles (no inline CSS) -->
+    <link rel="stylesheet" href="assets/styles.css" />
 </head>
 
 <body>
@@ -61,15 +18,22 @@
     </p>
 </header>
 
+<!-- Accessibility Box (left of phone on desktop) -->
+<aside class="a11y-box" role="complementary" aria-label="Accessibility options">
+    <h2>Need an easier login time?</h2>
+    <p>We’ve got you covered. Switch to a simple, accessible screen designed for folks who are low-vision, use screen readers, or prefer plain forms.</p>
+    <button id="enterSimpleMode" class="a11y-btn">Use Simple Mode</button>
+    <p class="a11y-note">Includes higher contrast, larger text, label-first fields, and a standard submit button.</p>
+</aside>
+
 <main class="container">
-    <section class="auth-shell">
-        <!-- Phone wrapper -->
+    <!-- Visual/phone UI (hidden when Simple Mode is ON) -->
+    <section class="auth-shell" aria-hidden="false">
         <div class="phone-stage">
             <div class="phone">
                 <div class="bezel">
                     <div class="notch"></div>
 
-                    <!-- Screen holds our form -->
                     <div class="screen">
                         <div class="home-indicator" aria-hidden="true"></div>
 
@@ -112,9 +76,26 @@
             </div>
         </div>
     </section>
+
+    <!-- Simple Mode (plain, accessible form; shown when enabled) -->
+    <section class="simple-auth" aria-hidden="true" hidden>
+        <h2 class="simple-title">Sign in to your account</h2>
+        <form id="loginSimpleForm" class="simple-form" novalidate>
+            <div class="simple-field">
+                <label for="simple-username">Username</label>
+                <input id="simple-username" name="username" type="text" autocomplete="username" required />
+            </div>
+            <div class="simple-field">
+                <label for="simple-password">Password</label>
+                <input id="simple-password" name="password" type="password" autocomplete="current-password" required />
+            </div>
+            <button type="submit" class="simple-submit">Sign in</button>
+            <button type="button" id="exitSimpleMode" class="simple-secondary">Return to visual mode</button>
+        </form>
+    </section>
 </main>
 
-<!-- Floating reviews rail (same structure as register) -->
+<!-- Floating reviews rail -->
 <aside id="reviewsFloat" class="reviews-float" role="complementary" aria-label="User reviews" aria-live="off"></aside>
 
 <footer class="footer">© 2025 Team 16 LAMP</footer>
@@ -126,7 +107,8 @@
         let h=now.getHours(), m=String(now.getMinutes()).padStart(2,"0");
         const ampm = h>=12 ? "PM":"AM";
         h=h%12; h=h?h:12;
-        document.getElementById("phone-time").textContent = `${h}:${m} ${ampm}`;
+        const el = document.getElementById("phone-time");
+        if (el) el.textContent = `${h}:${m} ${ampm}`;
     }
     updatePhoneTime(); setInterval(updatePhoneTime, 60000);
 </script>
@@ -181,7 +163,7 @@
             handle.style.pointerEvents='none';
             window.showToast && window.showToast('Logging in…','success');
 
-            const res = await fetch('http://134.199.196.132/contact_manager/api/login.php', {
+            const res = await fetch('/api/login.php', {
                 method:'POST',
                 headers:{'Content-Type':'application/json'},
                 body: JSON.stringify({ username: u.value.trim(), password: p.value }),
@@ -193,17 +175,7 @@
                 throw new Error(data.error || `Login failed (${res.status})`);
             }
 
-            if (data.id) {
-            localStorage.setItem('userId', data.id);
-            localStorage.setItem('userFirstName', data.firstName);
-            localStorage.setItem('userLastName', data.lastName);
-            } else {
-                throw new Error('Login response was missing user information.');
-            }
-
-            // success → route to your app shell/home
             window.showToast && window.showToast('Welcome back! Redirecting…','success');
-            // Change target if your app lands elsewhere (e.g., main.html)
             setTimeout(()=>{ window.location.href='profile.html'; }, 500);
         }
 
@@ -230,7 +202,6 @@
                 try{
                     await submitLogin();
                 }catch(err){
-                    // shake + reset + toast
                     track.classList.add('shake'); setTimeout(()=>track.classList.remove('shake'),320);
                     window.showToast && window.showToast(err.message || 'Could not log in.','error');
                     handle.style.pointerEvents='';
@@ -269,135 +240,67 @@
     })();
 </script>
 
-<!-- Accessibility TAB -->
-<div class="a11y-tab">
-    <button id="a11yOpen" aria-controls="a11yPanel" aria-expanded="false">Accessibility</button>
-</div>
-
-<!-- Accessibility PANEL -->
-<aside id="a11yPanel" class="a11y-panel" aria-hidden="true" role="region" aria-label="Accessibility settings">
-    <header>
-        <h3>Accessibility</h3>
-        <button id="a11yClose" aria-label="Close panel">✕</button>
-    </header>
-    <div class="body">
-        <div class="row" aria-live="polite">
-            <span class="desc">Accessibility Mode</span>
-            <label class="switch">
-                <input id="a11yMaster" type="checkbox" role="switch" aria-label="Toggle accessibility mode">
-                <span class="slider"></span>
-            </label>
-        </div>
-        <div class="group" id="a11yOptions" aria-disabled="true">
-            <div class="row">
-                <label for="a11yContrast">High contrast</label>
-                <label class="switch"><input id="a11yContrast" type="checkbox"><span class="slider"></span></label>
-            </div>
-            <div class="row">
-                <label for="a11yLarge">Larger text</label>
-                <label class="switch"><input id="a11yLarge" type="checkbox"><span class="slider"></span></label>
-            </div>
-            <div class="group">
-                <div class="row" style="justify-content:start;gap:8px">
-                    <button id="ttsReadPage">🔊 Read page</button>
-                    <button id="ttsReadForm">🔊 Read form</button>
-                    <button id="ttsStop">⏹ Stop</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</aside>
-
-<!-- Accessibility logic -->
+<!-- Simple Mode toggling + simple form submit -->
 <script>
-    document.addEventListener('DOMContentLoaded', function(){
-        const openBtn = document.getElementById('a11yOpen');
-        const closeBtn = document.getElementById('a11yClose');
-        const panel   = document.getElementById('a11yPanel');
-        const master  = document.getElementById('a11yMaster');
-        const options = document.getElementById('a11yOptions');
-        const form    = document.getElementById('loginForm');
-        if(!openBtn||!closeBtn||!panel||!master||!options) return;
+    (function a11ySimpleMode(){
+        const enterBtn = document.getElementById('enterSimpleMode');
+        const exitBtn  = document.getElementById('exitSimpleMode');
+        const simple   = document.querySelector('.simple-auth');
+        const visual   = document.querySelector('.auth-shell');
 
-        function el(id){ return document.getElementById(id); }
-
-        // load saved state
-        let state={};
-        try{ state = JSON.parse(localStorage.getItem('a11ySettings')||'{}'); }catch(e){ state={}; }
-        delete state.dys; delete state.reduce;
-        if(typeof state.enabled==='undefined') state.enabled=false;
-
-        function apply(){
-            document.body.classList.toggle('a11y-contrast', !!state.contrast);
-            document.documentElement.classList.toggle('a11y-large', !!state.large);
-
-            master.checked = !!state.enabled;
-            options.style.opacity = state.enabled ? '1' : '.5';
-            options.style.pointerEvents = state.enabled ? 'auto' : 'none';
-
-            const c=el('a11yContrast'); if(c) c.checked=!!state.contrast;
-            const l=el('a11yLarge');    if(l) l.checked=!!state.large;
+        function applySimple(on){
+            document.body.classList.toggle('a11y-simple', !!on);
+            document.documentElement.classList.toggle('a11y-large', !!on);   // larger base text
+            if(simple) { simple.hidden = !on; simple.setAttribute('aria-hidden', String(!on)); }
+            if(visual) { visual.setAttribute('aria-hidden', String(!!on)); }
+            try{ localStorage.setItem('a11ySimple', on ? '1' : '0'); }catch(e){}
+            if(on){
+                const first = document.getElementById('simple-username');
+                if(first) first.focus();
+            }
         }
-        function save(){ try{ localStorage.setItem('a11ySettings', JSON.stringify(state)); }catch(e){} }
-        apply();
 
-        function togglePanel(show){
-            panel.classList.toggle('open', !!show);
-            panel.setAttribute('aria-hidden', String(!show));
-            openBtn.setAttribute('aria-expanded', String(!!show));
-        }
-        openBtn.addEventListener('click', ()=>togglePanel(true));
-        closeBtn.addEventListener('click', ()=>togglePanel(false));
-        document.addEventListener('keydown', e=>{ if(e.key==='Escape') togglePanel(false); });
+        // Load persisted choice
+        let saved = '0';
+        try{ saved = localStorage.getItem('a11ySimple') || '0'; }catch(e){}
+        applySimple(saved === '1');
 
-        master.addEventListener('change', e=>{ state.enabled=!!e.target.checked; apply(); save(); });
-        el('a11yContrast').addEventListener('change', e=>{ if(!state.enabled) return; state.contrast=!!e.target.checked; apply(); save(); });
-        el('a11yLarge').addEventListener('change',    e=>{ if(!state.enabled) return; state.large=!!e.target.checked; apply(); save(); });
+        if(enterBtn) enterBtn.addEventListener('click', ()=> applySimple(true));
+        if(exitBtn)  exitBtn.addEventListener('click',  ()=> applySimple(false));
 
-        /* ===== TTS ===== */
-        const synth=window.speechSynthesis;
-        function speak(text){
-            if(!state.enabled||!text||!synth) return;
-            if(synth.speaking) synth.cancel();
-            const u=new SpeechSynthesisUtterance(text);
-            u.rate=1.0; u.pitch=1.0; synth.speak(u);
+        // Simple form submit (mirrors slider submit)
+        const simpleForm = document.getElementById('loginSimpleForm');
+        if(simpleForm){
+            simpleForm.addEventListener('submit', async (e)=>{
+                e.preventDefault();
+                const u = document.getElementById('simple-username');
+                const p = document.getElementById('simple-password');
+                if(!u.value.trim() || !p.value){
+                    window.showToast && window.showToast('Please enter Username and Password','error');
+                    if(!u.value.trim()) u.focus(); else p.focus();
+                    return;
+                }
+                try{
+                    window.showToast && window.showToast('Logging in…','success');
+                    const res = await fetch('/api/login.php', {
+                        method:'POST',
+                        headers:{'Content-Type':'application/json'},
+                        body: JSON.stringify({ username: u.value.trim(), password: p.value }),
+                        credentials: 'same-origin'
+                    });
+                    const data = await res.json().catch(()=> ({}));
+                    if(!res.ok || data.error) throw new Error(data.error || `Login failed (${res.status})`);
+                    window.showToast && window.showToast('Welcome back! Redirecting…','success');
+                    setTimeout(()=>{ window.location.href='profile.html'; }, 500);
+                }catch(err){
+                    window.showToast && window.showToast(err.message || 'Could not log in.','error');
+                }
+            });
         }
-        function isVisible(el){
-            if(!el) return false;
-            const s=getComputedStyle(el);
-            if(s.display==='none'||s.visibility==='hidden'||parseFloat(s.opacity)===0) return false;
-            return !!el.getClientRects().length;
-        }
-        function controlLabel(){
-            const slideLbl=form?form.querySelector('.slide-cta .slide-label'):null;
-            const btn=document.getElementById('a11ySubmitBtn');
-            if(btn && isVisible(btn)) return (btn.textContent.trim()+' button');
-            if(slideLbl && isVisible(slideLbl)) return slideLbl.textContent.trim();
-            return '';
-        }
-        function pageText(){
-            const clone=document.body.cloneNode(true);
-            clone.querySelectorAll('script,style,link,meta,noscript,code,pre,textarea,.a11y-panel,.a11y-tab,.status-bar,.home-indicator,#a11ySubmitBtn,.slide-cta,[hidden],[aria-hidden="true"]').forEach(n=>n.remove());
-            let txt=(clone.innerText||'').replace(/\s+/g,' ').trim();
-            const ctl=controlLabel(); if(ctl) txt += (txt?'. ':'') + ctl;
-            return txt;
-        }
-        function formText(){
-            if(!form) return '';
-            const parts=[];
-            const title=document.querySelector('.screen-title'); if(title&&isVisible(title)) parts.push(title.textContent.trim());
-            form.querySelectorAll('input').forEach(i=>{ if(isVisible(i)) parts.push(i.getAttribute('placeholder')||i.name||i.id||'field'); });
-            const ctl=controlLabel(); if(ctl) parts.push(ctl);
-            return parts.join('. ');
-        }
-        const rp=el('ttsReadPage'), rf=el('ttsReadForm'), st=el('ttsStop');
-        if(rp) rp.addEventListener('click',()=>speak(pageText()));
-        if(rf) rf.addEventListener('click',()=>speak(formText()));
-        if(st) st.addEventListener('click',()=>{ if(synth) synth.cancel(); });
-    });
+    })();
 </script>
 
-<!-- Toast (container + helper) -->
+<!-- Toast container + helper -->
 <div id="toast" class="toast" role="status" aria-live="polite"></div>
 <script>
     window.showToast = function (msg, type = 'info') {
@@ -410,7 +313,7 @@
     };
 </script>
 
-<!-- ===== Floating reviews (same dataset + logic as register) ===== -->
+<!-- Floating reviews -->
 <script>
     const REVIEWS = [
         { text:"I was keeping everything in a spreadsheet before this. Now I just add a contact when I meet someone, and a quick search brings them right up. Feels simple and private; My contacts stay mine.", name:"Alex N.",   title:"Freelance developer",  avatar:"AN" },
