Accessibilty Update: minor modifications to html (Added simple mode toggle) + css files.

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     </p>
 </header>
 
-<!-- Accessibility Box (left of phone on desktop) -->
+<!-- Accessibility Box -->
 <aside class="a11y-box" role="complementary" aria-label="Accessibility options">
     <h2>Need an easier login time?</h2>
     <p>We’ve got you covered. Switch to a simple, accessible screen designed for folks who are low-vision, use screen readers, or prefer plain forms.</p>
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <!-- Simple Mode (plain, accessible form; shown when enabled) -->
+    <!-- Simple Mode -->
     <section class="simple-auth" aria-hidden="true" hidden>
         <h2 class="simple-title">Sign in to your account</h2>
         <form id="loginSimpleForm" class="simple-form" novalidate>
