--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     </p>
 </header>
 
-<!-- Accessibility Box (left rail) -->
+<!-- Accessibility Box -->
 <aside class="a11y-box" role="complementary" aria-label="Accessibility options">
     <h2>Need an easier login time?</h2>
     <p>We’ve got you covered. Switch to a simple, accessible screen designed for
@@ -80,7 +80,7 @@
         </div>
     </section>
 
-    <!-- Simple Mode (plain, accessible form) -->
+    <!-- Simple Mode  -->
     <section class="simple-auth" aria-hidden="true" hidden>
         <h2 class="simple-title">Create your account</h2>
         <form id="registerSimpleForm" class="simple-form" novalidate>
