--- a/login.html
+++ b/login.html
@@ -283,6 +283,7 @@
                 //lets see if this commits
                 try{
                     window.showToast && window.showToast('Logging in…','success');
+                    //commit
                     const res = await fetch('http://cop4331-lamp.xyz/contact_manager/api/login.php', {
                         method:'POST',
                         headers:{'Content-Type':'application/json'},
