--- a/register.html
+++ b/register.html
@@ -163,7 +163,7 @@
             handle.style.pointerEvents='none';
             window.showToast && window.showToast('Registering…','success');
 
-            const res = await fetch('/api/register.php', {
+            const res = await fetch('api/register.php', {
                 method:'POST',
                 headers: {'Content-Type':'application/json'},
                 body: JSON.stringify({ username: u.value.trim(), password: p.value }),
@@ -284,7 +284,7 @@
                 }
                 try{
                     window.showToast && window.showToast('Registering…','success');
-                    const res = await fetch('http://cop4331-lamp.xyz/contact_manager/api/login.php', {
+                    const res = await fetch('api/register.php', {
                         method:'POST',
                         headers:{'Content-Type':'application/json'},
                         body: JSON.stringify({ username: u.value.trim(), password: p.value }),
