--- a/register.html
+++ b/register.html
@@ -53,7 +53,7 @@
                         <h2 class="screen-title">Create your account</h2>
 
                         <form id="registerForm" class="auth-form" novalidate>
-                            
+
                             <div class="field">
                                 <input id="first_name" name="first_name" type="text"
                                        class="glass-input" placeholder="first name" required autocomplete="name">
@@ -186,6 +186,14 @@
             const data = await res.json().catch(()=> ({}));
             if(!res.ok || data.error){
                 throw new Error(data.error || `Registration failed (${res.status})`);
+            }
+
+            if (data.id) {
+                localStorage.setItem('userId', data.id);
+                localStorage.setItem('userFirstName', data.firstName);
+                localStorage.setItem('userLastName', data.lastName);
+            } else {
+                throw new Error('Registration response not working');
             }
 
             // Success -> route
