--- a/register.html
+++ b/register.html
@@ -95,6 +95,15 @@
     <section class="simple-auth" aria-hidden="true" hidden>
         <h2 class="simple-title">Create your account</h2>
         <form id="registerSimpleForm" class="simple-form" novalidate>
+
+            <div class="simple-field">
+        <label for="simple-firstName">First Name</label>
+        <input id="simple-firstName" name="firstName" type="text" required />
+    </div>
+    <div class="simple-field">
+        <label for="simple-lastName">Last Name</label>
+        <input id="simple-lastName" name="lastName" type="text" required />
+    </div>
             <div class="simple-field">
                 <label for="simple-username">Username</label>
                 <input id="simple-username" name="username" type="text" autocomplete="username" required />
