--- a/login.html
+++ b/login.html
@@ -163,7 +163,7 @@
             handle.style.pointerEvents='none';
             window.showToast && window.showToast('Logging in…','success');
 
-            const res = await fetch('/api/login.php', {
+            const res = await fetch('api/login.php', {
                 method:'POST',
                 headers:{'Content-Type':'application/json'},
                 body: JSON.stringify({ username: u.value.trim(), password: p.value }),
@@ -282,7 +282,7 @@
                 }
                 try{
                     window.showToast && window.showToast('Logging in…','success');
-                    const res = await fetch('/api/login.php', {
+                    const res = await fetch('api/login.php', {
                         method:'POST',
                         headers:{'Content-Type':'application/json'},
                         body: JSON.stringify({ username: u.value.trim(), password: p.value }),
