--- a/register.html
+++ b/register.html
@@ -205,7 +205,7 @@
             window.showToast && window.showToast('Registering…','success');
 
 
-            const res = await fetch('http://134.199.196.132/contact_manager/api/register.php', {
+            const res = await fetch('api/register.php', {
                 method:'POST',
                 headers: {'Content-Type':'application/json'},
                 body: JSON.stringify({ first_name: fn.value.trim() , last_name: l.value.trim() , username: u.value.trim(), password: p.value }),
