--- a/register.html
+++ b/register.html
@@ -188,6 +188,7 @@
         }
 
         async function submitRegistration(){
+            localStorage.clear();
             const fn=form.querySelector('#first_name');
             const l=form.querySelector('#last_name');
             const u=form.querySelector('#username');
