to pass lgihthouse

--- a/profile.html
+++ b/profile.html
@@ -39,12 +39,15 @@
                 <input id="searchInput" class="input" type="search" placeholder="Search for contacts…" />
             </div>
             <div class="tool-right">
+                <label for="sortSelect" class="visually-hidden">Sort contacts by</label>
+
                 <select id="sortSelect" class="input">
                     <option value="">Sort by</option>
                     <option value="firstName">First name</option>
                     <option value="lastName">Last name</option>
                     <option value="email">Email</option>
                 </select>
+                
                 <button id="refreshBtn" class="btn">Refresh</button>
             </div>
         </section>
